@@ -1,0 +1,1 @@
+PASS: Counters updated successfully without crashing
